native/include/luaujava.h

LUA_API void* luaW_newuserdatadtor(lua_State* L, size_t sz, void (*dtor)(void*));
// lua_rawgetfield
// lua_rawget
// lua_rawgeti
// lua_rawgetptagged
LUA_API void luaW_createtable(lua_State* L, int narr, int nrec);
// lua_setreadonly
// lua_getreadonly
// lua_setsafeenv
// lua_getmetatable
// lua_getfenv

LUA_API void luaW_settable(lua_State* L, int idx);
LUA_API void luaW_setfield(lua_State* L, int idx, const char* k);
LUA_API void luaW_rawsetfield(lua_State* L, int idx, const char* k);
LUA_API void luaW_rawset(lua_State* L, int idx);
LUA_API void luaW_rawseti(lua_State* L, int idx, int n);
LUA_API int luaW_setmetatable(lua_State* L, int objindex);
// lua_setfenv

// luau_load
// lua_call is unused
// lua_pcall
// lua_cpcall is unused

LUA_API int luaW_yield(lua_State* L, int nresults); // TODO: this only throws if there is a c boundary on the stack. We can check this with isyieldable from java and handle this error there.