src/generated/java/net/hollowcube/luau/internal/vm/luawrap_h.java


    /**
     * {@snippet lang=c :
     * extern void luaW_createtable(lua_State *L, int narr, int nrec)
     * }
     */
    public static void luaW_createtable(MemorySegment L, int narr, int nrec) {
        var mh$ = luaW_createtable.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("luaW_createtable", L, narr, nrec);
            }
            mh$.invokeExact(L, narr, nrec);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class luaW_settable {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            luawrap_h.C_POINTER,
            luawrap_h.C_INT
        );

        public static final MemorySegment ADDR = luawrap_h.findOrThrow("luaW_settable");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern void luaW_settable(lua_State *L, int idx)
     * }
     */
    public static FunctionDescriptor luaW_settable$descriptor() {
        return luaW_settable.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern void luaW_settable(lua_State *L, int idx)
     * }
     */
    public static MethodHandle luaW_settable$handle() {
        return luaW_settable.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern void luaW_settable(lua_State *L, int idx)
     * }
     */
    public static MemorySegment luaW_settable$address() {
        return luaW_settable.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern void luaW_settable(lua_State *L, int idx)
     * }
     */
    public static void luaW_settable(MemorySegment L, int idx) {
        var mh$ = luaW_settable.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("luaW_settable", L, idx);
            }
            mh$.invokeExact(L, idx);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class luaW_setfield {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            luawrap_h.C_POINTER,
            luawrap_h.C_INT,
            luawrap_h.C_POINTER
        );

        public static final MemorySegment ADDR = luawrap_h.findOrThrow("luaW_setfield");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern void luaW_setfield(lua_State *L, int idx, const char *k)
     * }
     */
    public static FunctionDescriptor luaW_setfield$descriptor() {
        return luaW_setfield.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern void luaW_setfield(lua_State *L, int idx, const char *k)
     * }
     */
    public static MethodHandle luaW_setfield$handle() {
        return luaW_setfield.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern void luaW_setfield(lua_State *L, int idx, const char *k)
     * }
     */
    public static MemorySegment luaW_setfield$address() {
        return luaW_setfield.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern void luaW_setfield(lua_State *L, int idx, const char *k)
     * }
     */
    public static void luaW_setfield(MemorySegment L, int idx, MemorySegment k) {
        var mh$ = luaW_setfield.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("luaW_setfield", L, idx, k);
            }
            mh$.invokeExact(L, idx, k);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class luaW_rawsetfield {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            luawrap_h.C_POINTER,
            luawrap_h.C_INT,
            luawrap_h.C_POINTER
        );

        public static final MemorySegment ADDR = luawrap_h.findOrThrow("luaW_rawsetfield");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern void luaW_rawsetfield(lua_State *L, int idx, const char *k)
     * }
     */
    public static FunctionDescriptor luaW_rawsetfield$descriptor() {
        return luaW_rawsetfield.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern void luaW_rawsetfield(lua_State *L, int idx, const char *k)
     * }
     */
    public static MethodHandle luaW_rawsetfield$handle() {
        return luaW_rawsetfield.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern void luaW_rawsetfield(lua_State *L, int idx, const char *k)
     * }
     */
    public static MemorySegment luaW_rawsetfield$address() {
        return luaW_rawsetfield.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern void luaW_rawsetfield(lua_State *L, int idx, const char *k)
     * }
     */
    public static void luaW_rawsetfield(MemorySegment L, int idx, MemorySegment k) {
        var mh$ = luaW_rawsetfield.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("luaW_rawsetfield", L, idx, k);
            }
            mh$.invokeExact(L, idx, k);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class luaW_rawset {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            luawrap_h.C_POINTER,
            luawrap_h.C_INT
        );

        public static final MemorySegment ADDR = luawrap_h.findOrThrow("luaW_rawset");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern void luaW_rawset(lua_State *L, int idx)
     * }
     */
    public static FunctionDescriptor luaW_rawset$descriptor() {
        return luaW_rawset.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern void luaW_rawset(lua_State *L, int idx)
     * }
     */
    public static MethodHandle luaW_rawset$handle() {
        return luaW_rawset.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern void luaW_rawset(lua_State *L, int idx)
     * }
     */
    public static MemorySegment luaW_rawset$address() {
        return luaW_rawset.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern void luaW_rawset(lua_State *L, int idx)
     * }
     */
    public static void luaW_rawset(MemorySegment L, int idx) {
        var mh$ = luaW_rawset.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("luaW_rawset", L, idx);
            }
            mh$.invokeExact(L, idx);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class luaW_rawseti {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            luawrap_h.C_POINTER,
            luawrap_h.C_INT,
            luawrap_h.C_INT
        );

        public static final MemorySegment ADDR = luawrap_h.findOrThrow("luaW_rawseti");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern void luaW_rawseti(lua_State *L, int idx, int n)
     * }
     */
    public static FunctionDescriptor luaW_rawseti$descriptor() {
        return luaW_rawseti.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern void luaW_rawseti(lua_State *L, int idx, int n)
     * }
     */
    public static MethodHandle luaW_rawseti$handle() {
        return luaW_rawseti.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern void luaW_rawseti(lua_State *L, int idx, int n)
     * }
     */
    public static MemorySegment luaW_rawseti$address() {
        return luaW_rawseti.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern void luaW_rawseti(lua_State *L, int idx, int n)
     * }
     */
    public static void luaW_rawseti(MemorySegment L, int idx, int n) {
        var mh$ = luaW_rawseti.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("luaW_rawseti", L, idx, n);
            }
            mh$.invokeExact(L, idx, n);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class luaW_setmetatable {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            luawrap_h.C_INT,
            luawrap_h.C_POINTER,
            luawrap_h.C_INT
        );

        public static final MemorySegment ADDR = luawrap_h.findOrThrow("luaW_setmetatable");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern int luaW_setmetatable(lua_State *L, int objindex)
     * }
     */
    public static FunctionDescriptor luaW_setmetatable$descriptor() {
        return luaW_setmetatable.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern int luaW_setmetatable(lua_State *L, int objindex)
     * }
     */
    public static MethodHandle luaW_setmetatable$handle() {
        return luaW_setmetatable.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern int luaW_setmetatable(lua_State *L, int objindex)
     * }
     */
    public static MemorySegment luaW_setmetatable$address() {
        return luaW_setmetatable.ADDR;
    }

    /**
     * {@snippet lang=c :
     * extern int luaW_setmetatable(lua_State *L, int objindex)
     * }
     */
    public static int luaW_setmetatable(MemorySegment L, int objindex) {
        var mh$ = luaW_setmetatable.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("luaW_setmetatable", L, objindex);
            }
            return (int)mh$.invokeExact(L, objindex);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class luaW_yield {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            luawrap_h.C_INT,
            luawrap_h.C_POINTER,
            luawrap_h.C_INT
        );

        public static final MemorySegment ADDR = luawrap_h.findOrThrow("luaW_yield");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * extern int luaW_yield(lua_State *L, int nresults)
     * }
     */
    public static FunctionDescriptor luaW_yield$descriptor() {
        return luaW_yield.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * extern int luaW_yield(lua_State *L, int nresults)
     * }
     */
    public static MethodHandle luaW_yield$handle() {
        return luaW_yield.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * extern int luaW_yield(lua_State *L, int nresults)
     * }
     */
    public static MemorySegment luaW_yield$address() {
        return luaW_yield.ADDR;
    }
